--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel = "Stylesheet"href="Styles/aboutUs.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
 </head>
 <body>
+    <header data-bs-theme="dark">
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+            <div class="container">
+                <div class="d-flex">
+                    <a href="index.html" class="btn btn-dark btn-lg me-2" role="button" aria-pressed="true">Home</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <header class="AU-header">
+        <h1>About Us</h1>
+    </header>
+
+    <main>
+        <section id="author1">
+            <h2>Jacob Frencher</h2>
+            <img src="author1.jpg" alt="Author 1 Picture"> 
+            <p>A short biography of author 1 goes here. Describe their background, interests, and contributions.</p>
+        </section>
+
+        <section id="author2">
+            <h2>Andres Gonzalez</h2>
+            <img src="author2.jpg" alt="Author 2 Picture"> 
+            <p>A short biography of author 2 goes here. Describe their background, interests, and contributions.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>For inquiries, email us at: <a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 CyConnect</p>
+    </footer>
     
 </body>
 </html>
