--- a/aboutUs.html
+++ b/aboutUs.html
@@ -126,6 +126,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="aboutUs.html">About Us</a>
+            </li>
           </ul>
           
         </div>
