--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="Stylesheet" href="Styles/aboutUs.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/">
+    <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/"> -->
     
     <script src="../assets/js/color-modes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -91,6 +91,10 @@
       .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
       }
+
+      img {
+        border-radius: 50%;
+      }
     </style>
 
     
@@ -147,7 +151,9 @@
     <img src =Images\Gemini_Generated_Image.jpg alt ="logo" style="width: 300px;">
   </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+  <script src="index.js"></script>
+
+  <!-- <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 py-3">
         <h2 class="display-5">Jacob Frencher</h2>
@@ -160,6 +166,10 @@
         <p class="lead">Co-Founder</p>
       </div>
     </div>
+  </div> -->
+
+  <div id="aboutContainer">
+
   </div>
 
 <footer class="container py-5">
