--- a/aboutUs.html
+++ b/aboutUs.html
@@ -148,7 +148,7 @@
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
       </div>
     </div>
-    <img src =Images\Gemini_Generated_Image.jpg alt ="logo" style="width: 300px;">
+    <!-- <img src =Images\Gemini_Generated_Image.jpg alt ="logo" style="width: 300px;"> -->
   </div>
 
   <script src="index.js"></script>
