ready to turn in midterm

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -133,12 +133,14 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="aboutUs.html">About Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="stuInfo.html">Student Information</a>
+          </li>
           </ul>
-          
         </div>
       </div>
     </nav>
-  </header>
+</header>
 
 <main>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
@@ -151,7 +153,7 @@
     <!-- <img src =Images\Gemini_Generated_Image.jpg alt ="logo" style="width: 300px;"> -->
   </div>
 
-  <script src="index.js"></script>
+  <script src="aboutUs.js"></script>
 
   <!-- <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
