--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
       .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
       }
+
+      #logopic {
+        border-radius: 50%;
+      }
+
+      #postsContainer {
+        margin: auto;
+        width: 50%;
+      }
     </style>
 
     
@@ -113,24 +122,40 @@
   </symbol>
 </svg>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src =Images\Gemini_Generated_Image.jpg alt ="logo" style="width:42px;height: 42px;"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="aboutUs.html">About Us</a>
-                  </li>
-              </ul>
-            </div>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src =Images\Gemini_Generated_Image.jpg id = "logopic"alt ="logo" style="width:42px;height: 42px;"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="aboutUs.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="stuInfo.html">Student Information</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
     </header>
+
+    <div id="postsContainer">
+
+    </div>
+    <footer class="container py-5">
+        <div class="row">
+          <div class="col-12 col-md">
+            <small class="d-block mb-3 text-body-secondary">&copy; 2017–2024</small>
+          </div>
+          
+      </footer>
+      <script src="index.js"></script>
+      <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
